data/derived/fa15/progs/unify/prog0723.ml.out
Characters 47-65:
  if n < 0 then [] else digitsOfInt (n/10)::([]@[(n mod 10)]);;
                        ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
